force-app/main/default/objects/Dummy06__c/Dummy06__c.object-meta.xml
<CustomObject>
    <label>Dummy06</label>
    <nameField>
        <label>Dummy06 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy06</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>