force-app/main/default/objects/Dummy06__c/fields/FooBar061__c.field-meta.xml
<CustomField>
    <fullName>FooBar061__c</fullName>
    <label>FooBar061</label>
    <length>255</length>
    <type>Text</type>
</CustomField>