force-app/main/default/objects/Dummy06__c/fields/FooBar132__c.field-meta.xml
<CustomField>
    <fullName>FooBar132__c</fullName>
    <label>FooBar132</label>
    <length>255</length>
    <type>Text</type>
</CustomField>