force-app/main/default/objects/Dummy06__c/fields/FooBar145__c.field-meta.xml
<CustomField>
    <fullName>FooBar145__c</fullName>
    <label>FooBar145</label>
    <length>255</length>
    <type>Text</type>
</CustomField>